Make sure a bridge delegated to the bridged method and not in (#EASYMOCK-39)